// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a warning snackbar 1`] = `
<div
  class="snackbar warning visible"
  role="button"
>
  <span
    aria-label="su-bell"
    class="su-bell icon"
  />
  <div
    class="text"
  >
    <strong>
      sulu_admin.warning
    </strong>
    <button
      class="closeButton"
    >
      sulu_admin.close
      <span
        aria-label="su-times"
        class="su-times closeButtonIcon"
      />
    </button>
  </div>
</div>
`;

exports[`Render an error snackbar 1`] = `
<div
  class="snackbar error visible"
  role="button"
>
  <span
    aria-label="su-exclamation-triangle"
    class="su-exclamation-triangle icon"
  />
  <div
    class="text"
  >
    <strong>
      sulu_admin.error
    </strong>
    <button
      class="closeButton"
    >
      sulu_admin.close
      <span
        aria-label="su-times"
        class="su-times closeButtonIcon"
      />
    </button>
  </div>
</div>
`;

exports[`Render an error snackbar without close button 1`] = `
<div
  class="snackbar error visible"
  role="button"
>
  <span
    aria-label="su-exclamation-triangle"
    class="su-exclamation-triangle icon"
  />
  <div
    class="text"
  >
    <strong>
      sulu_admin.error
    </strong>
  </div>
</div>
`;
